# py-torres

./: Dockerfile  dev.Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
pytorres/: main.py  parser.py  regex.py  utils.py
pytorres/conf/: exclude_terms
